src/styles/resort.scss
@import './main.scss';

.section_resorts {
  padding: 80px 0 0;
  background: #f0ebe6;
  .container {
    max-width: 1130px;
    margin: 0 auto;
  }
  .nav_title {
    margin-bottom: 20px;
    padding-top: 55px;
    text-transform: uppercase;
    font-family: 'Roboto Condensed';
    font-size: 16px;
  }
  .resorts_top {
    margin-bottom: 30px;
    h3 {
      display: inline;
      font-size: 48px;
      font-family: 'Antique Olive Std Bold';
      margin-bottom: 40px;
      line-height: 56px;
      max-width: 780px;
    }
    p {
      margin-top: 35px;
      margin-bottom: 40px;
      font-family: 'Roboto';
      max-width: 780px;
      font-size: 20px;
    }
    img {
      width: 100%;
      display: block;
      height: auto;
    }
  }
  .resorts_middle {
    display: flex;
    flex-wrap: wrap;
    position: relative;
    margin-bottom: 50px;
    width: 100%;
    .rm_box {
      width: 100%;
      display: flex;
      .resorts_card {
        display: block;
        width: calc(100% / 4);
        height: 125px;
        background: #fff;
        position: relative;
        &.active {
          background: rgba(6, 72, 78, 1);
          img {
            filter: invert(100%) brightness(1000%);
          }
        }
        img {
          height: 100%;
          max-height: 72px;
          object-fit: contain;
          display: block;
          position: absolute;
          top: 50%;
          left: 50%;
          transform: translate(-50%, -50%);
        }
      }
    }
  }
  .resorts_bottom {
    display: flex;
    flex-wrap: wrap;
    border-bottom: 1px solid #000;
    flex-direction: row-reverse;
    padding-bottom: 60px;
    .rb_left {
      width: 50%;
    }
    .big_image {
      width: 100%;
      margin-bottom: 20px;
      img {
        width: 100%;
        height: auto;
        display: block;
      }
    }
    .small_image {
      display: flex;
      flex-wrap: wrap;
      .si_box {
        width: calc((100% - 20px) / 2);
        margin-right: 20px;
        &:last-child {
          margin-right: 0;
        }
        img {
          width: 100%;
          height: auto;
          display: block;
        }
      }
    }
    .rb_right {
      width: 50%;
      padding: 40px 30px;
    }
    .rbr_top {
      padding-bottom: 30px;
      margin-bottom: 30px;
      font-family: 'Roboto';
      h3 {
        font-size: 32px;
        font-family: 'Antique Olive Std Bold';
        margin-bottom: 20px;
        text-transform: capitalize;
        position: relative;
        display: block;
        padding-right: 50px;
        cursor: pointer;
        &::before {
          content: '';
          width: 40px;
          height: 40px;
          display: block;
          background: url('../assets/home/arrow_black.png') no-repeat center /
            22px;
          position: absolute;
          top: 0;
          right: 0;
          border: 1px solid #000;
          border-radius: 40px;
          transition: all 0.2s ease;
          z-index: 1;
        }
        a {
          display: block;
          position: relative;
          z-index: 10;
        }
        &:hover {
          &::before {
            background: $green url('../assets/home/arrow_green.png') no-repeat
              center / 22px;
            border: 1px solid #fff;
            transition: all 0.2s ease;
          }
        }
      }
    }
    .rbr_bottom {
      position: relative;
      font-family: 'Roboto';
      border: 1px solid #000;
      padding: 20px 20px 120px;
      h4 {
        font-size: 24px;
        font-family: 'Antique Olive Std Bold';
      }
      ul {
        list-style: disc;
        padding-left: 20px;
      }
      .pkg_price {
        font-family: 'Roboto';
        font-weight: bold;
        position: absolute;
        font-size: 28px;
        bottom: 30px;
        left: 20px;
        padding-right: 120px;
        span {
          font-family: 'Roboto';
          font-weight: normal;
          font-size: 16px;
          display: inline-block;
          margin-right: 5px;
        }
      }
      .button_box {
        position: absolute;
        bottom: 20px;
        right: 20px;
      }
      button {
        padding: 0 20px;
        height: 45px;
        border-radius: 45px;
        font-size: 16px;
        line-height: 19.2px;
        background: $orange;
        transition: all 0.2s ease;
        font-family: 'Antique Olive Std Bold';
        text-transform: uppercase;
        color: #fff;
        &:hover {
          background: $green;
          color: $darkgreen;
        }
        &:disabled {
          background: rgba(139, 139, 139, 1);
          color: rgba(179, 179, 179, 1);
        }
      }
    }
  }
  .faq_info {
    padding: 40px 0 260px;
    background: url('../assets/main/background_wave.png') no-repeat bottom left /
      contain;
    text-align: center;
    font-size: 24px;
    button {
      margin-top: 20px;
      height: 45px;
      text-transform: uppercase;
      padding: 0 20px;
      border-radius: 45px;
      background: rgba(6, 72, 78, 1);
      font-size: 16px;
      color: #fff;
      transition: all 0.2s ease;
      &:hover {
        background: $green;
        color: $darkgreen;
        transition: all 0.2s ease;
      }
    }
  }
}
@media only screen and (max-width: 1129px) {
  .section_resorts {
    padding-top: 80px;
    .container {
      padding: 0 40px;
    }
    .resorts_top {
      h3 {
        font-size: 34px;
        line-height: normal;
        margin-bottom: 20px;
      }
      p {
        font-size: 16px;
      }
    }
    .resorts_bottom {
      .rb_right {
        padding-top: 0;
      }
    }
    .faq_info {
      padding: 20px 20px 200px;
    }
  }
}

@media only screen and (max-width: 767px) {
  .section_resorts {
    padding-top: 60px;
    .nav_title {
      padding-top: 52px;
      padding-left: 20px;
      padding-right: 20px;
    }
    .container {
      padding: 0;
    }
    .resorts_top {
      padding: 0 20px;
      h3 {
        font-size: 28px;
        line-height: normal;
        margin-bottom: 30px;
      }
      p {
        font-size: 16px;
      }
    }
    .resorts_middle {
      display: block;
      overflow-x: scroll;
      padding-left: 20px;
      margin-bottom: 38px;
      .rm_box {
        width: 436px;
      }
      .resorts_card {
        width: 100px;
        height: 80px;
        margin-right: 5px;
        display: inline-block;
        div {
          width: 100%;
          height: 80px;
        }
        img {
          max-height: 48px;
          width: 100%;
          max-width: 80%;
        }
      }
    }
    .resorts_bottom {
      display: block;
      padding: 0 20px;
      .rbr_top {
        margin-bottom: 0;
        h3 {
          line-height: 34px;
        }
      }
      .rb_left {
        width: 100%;
        padding-bottom: 60px;
      }
      .rb_right {
        width: 100%;
        padding: 0;
        margin-bottom: 20px;
      }
      .rbr_bottom {
        padding-bottom: 20px;
        .pkg_price {
          margin-top: 20px;
          position: static;
          margin-bottom: 20px;
        }
        .button_box {
          position: static;
        }
      }
    }
    .faq_info {
      padding: 20px 20px 120px;
    }
  }
}

